--- a/public/locales/en-US.json
+++ b/public/locales/en-US.json
@@ -833,5 +833,6 @@
   "Manual WAGYU": "Manual WAGYU",
   "Auto WAGYU": "Auto WAGYU",
   "Recent WAGYU profit": "Recent WAGYU profit",
-  "WAGYU Prizes": "WAGYU Prizes"
+  "WAGYU Prizes": "WAGYU Prizes",
+  "Win if 2, 3, or 4 of your ticket numbers match!": "Win if 2, 3, or 4 of your ticket numbers match!"
 }
